tests/errors/E013.zen
int main() {
    var a := 5;
    a = true;         // E013: Type mismatch in assignment
    return a;
}